nxn/test/pass/002-04.nxn
// Return an integer value from a valid borrow checked reference
// Note: This demonstrates valid implementation of region based non-lexical lifetimes.

fn main() i32 {
    let mut x: &int = undefined;
    let y = 7;
    {
        let a = 9;
        x = a&;     // WARN: a does not live long enough! But it's okay, since it's not used!
        x = y&;     // OK:   Since y lives long enough!
    }
    let z = x#;     // OK:   Since y, which is assinged to x, lives long enough!
    return z;
}
