nxn/test/fail/001-002-001.nxn
// Borrow checker error due to lifetime violation
// Note: This demostrates valid implementation of scope based lexical lifetimes.

fn main() i32 {
    let mut x: &int = undefined;
    {
        let y = 9;  // WARN:  y is allocated on the stack and only lives till end of this block.
        x = y&;     // ERROR: y does not live long enough!
    }
    let z = x#;     // ERROR: y which is assigned to x, does not live long enough!
    return z;
}
